Fix theme and structure

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yubina Acharya Portfolio</title>
- <link rel="stylesheet" href="./style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  
+
+  <!-- Link to external style.css -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Font + Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <header>
@@ -61,7 +63,7 @@
     <h2>contact</h2>
     <p>Feel free to reach out to me at <a href="mailto:yubina.acharya@gmail.com">yubina.acharya@gmail.com</a></p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/yubina-acharya-93a986251/" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.linkedin.com/in/yubina-acharya-93a986251/" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <a href="#"><i class="fab fa-github"></i></a>
